--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,8 @@
 <section>
   <ul class="breadcrumbs">
-    <li><a href="/index.html">Home</a></li>
+    <%= link_to 'HOME', '/index.html', class: 'breadcrumbs__home'%>
   </ul>
-  
+
   <h1 class="title">
     Chi siamo?
   </h1>
