💄 Code makeup and <li> restored.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <ul class="breadcrumbs">
-    <%= link_to 'HOME', '/index.html', class: 'breadcrumbs__home'%>
+    <li><%= link_to 'HOME', '/index.html', class: 'breadcrumbs__home' %></li>
   </ul>
 
   <h1 class="title">
