--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -198,6 +198,7 @@ footer {
   background-color: #505151;
   padding: 1rem;
   text-align: center;
+  border-top: 2px solid black;
 }
 
 .footer-wrapper {
