Feature/22 le scuole (#38)
* le scuole s page

* page fixes

* breadcrubs fixes

* general fixes

* syntax fixes

* Padding fix

* breadcrumbs fix

* 💄 Code makeup and <li> restored.

* Restores link behavior.

* Applies a thin border to the footer.

* color fixes

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,8 @@
 <section>
+  <ul class="breadcrumbs">
+    <li><%= link_to 'HOME', '/index.html', class: 'breadcrumbs__home' %></li>
+  </ul>
+
   <h1 class="title">
     Chi siamo?
   </h1>
