Adds a favicon and a placeholder title.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,8 +11,8 @@
     <!-- Use the title from a page's frontmatter if it has one -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
-    <title>
-    </title>
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+    <title>Scuole Parrocchiali Desio</title>
   </head>
   <body>
     <header>
