--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -6,6 +6,7 @@ $font-color: #282A2E;
 $description: white;
 $background-footer: #505151;
 
+
 * {
   box-sizing: border-box;
 }
@@ -191,10 +192,6 @@ a:hover {
   height: auto;
 }
 
-.gallery {
-  object-fit: cover;
-}
-
 footer {
   display: grid;
   background-color: $background-footer;
@@ -263,4 +260,57 @@ footer {
 #map {
   width: 100%;
   height: 300px;
+}
+
+.cover-image {
+  display: block;
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.gallery {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 0.75rem;
+}
+.gallery__item {
+  object-fit: cover;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  border: 3px solid black;
+  grid-gap: 0.5rem;
+}
+
+.gallery__item img {
+  width: 100%;
+  max-height: 20rem;
+  object-fit: cover;
+  justify-self: center;
+}
+
+.gallery__item figcaption {
+  background: black;
+  color: white;
+  text-align: center;
+  padding: 0.25rem;
+}
+
+.contact {
+  padding-bottom: 2rem;
+  text-align: center;
+}
+
+button {
+  position: relative;
+  a:visited, a{
+    color: $font-color;
+  }
+}
+
+
+table {
+  border-collapse: collapse;
+  th, td {
+    border: 1px solid black;
+  }
 }
