--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div class="header-brand">
-        <img src="images/logo.png" class="header-brand__logo">
+        <img src="/images/logo.png" class="header-brand__logo">
         <a class="header-brand__link" href="/">Scuole Parrocchiali Desio</a>
       </div>
       <a class="header-link header-link--schools"href="/le_scuole.html">Le scuole</a>
