--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -272,6 +272,7 @@ footer {
   display: grid;
   grid-template-columns: auto auto;
   grid-gap: 0.75rem;
+  crop: fit;
 }
 .gallery__item {
   object-fit: cover;
