23 gallery and table

--- a/source/scuole/san_giuseppe.html.erb
+++ b/source/scuole/san_giuseppe.html.erb
@@ -20,31 +20,31 @@
   <div class="gallery">
     <figure class="gallery__item">
       <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'photo_ex1.jpeg', class: 'gallery__photo' %>
+        <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200' %>
       <% end %>
       <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
     </figure>
     <figure class="gallery__item">
       <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'photo_ex2.jpeg', class: 'gallery__photo' %>
+        <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200' %>
       <% end %>
       <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
     </figure>
     <figure class="gallery__item">
       <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'photo_ex3.jpg', class: 'gallery__photo' %>
+        <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200' %>
       <% end %>
       <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
     </figure>
     <figure class="gallery__item">
       <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'photo_ex4.jpeg', class: 'gallery__photo' %>
+        <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200' %>
       <% end %>
       <figcaption>Lorem ipsum dolor sit amet.</figcaption>
     </figure>
     <figure class="gallery__item">
       <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'photo_ex5.jpeg', class: 'gallery__photo' %>
+        <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200' %>
       <% end %>
       <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
     </figure>
