--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -320,10 +320,12 @@ footer {
 
 table {
   align: center;
+  text-align: center;
   border-collapse: collapse;
   th, td {
-    border: 1px solid black;
+    border: 3px solid $background-footer;
   }
+  tr:nth-child(even) {background-color: #f2f2f2;}
 }
 
 .team, .project, .event, .contact {
