23 table and botton fixes

--- a/source/scuole/san_giuseppe.html.erb
+++ b/source/scuole/san_giuseppe.html.erb
@@ -52,31 +52,35 @@
 </section>
 
 <section>
-  <h1 class="title">Orari</h1>
-  <table align="center">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Orari</th>
+      </tr>
+    </thead>
     <tbody>
       <tr>
-        <td>7.30*/9.00</td>
+        <td>7.30* - 9.00</td>
         <td>Pre-scuola</td>
       </tr>
       <tr>
-        <td>9.00/9.30</td>
+        <td>9.00 - 9.30</td>
         <td>Accoglienza</td>
       </tr>
       <tr>
-        <td>9.45/11.30</td>
-        <td>Attività di sezione, intersezione, laboratori e interventi specialistici</td>
+        <td>9.45 - 11.30</td>
+        <td>Attività di sezione, intersezione,<br>laboratori e interventi specialistici</td>
       </tr>
       <tr>
-        <td>11.30/12.00</td>
+        <td>11.30 - 12.00</td>
         <td>Riordino e preparazione al pranzo</td>
       </tr>
       <tr>
-        <td>12.00/13.00</td>
+        <td>12.00 - 13.00</td>
         <td>Pranzo</td>
       </tr>
       <tr>
-        <td>13.00/13.30</td>
+        <td>13.00 - 13.30</td>
         <td>Gioco libero</td>
       </tr>
       <tr>
@@ -84,25 +88,23 @@
         <td>Prima uscita</td>
       </tr>
       <tr>
-        <td>13.30/14.45</td>
+        <td>13.30 - 14.45</td>
         <td>Nanna piccoli</td>
       </tr>
       <tr>
-        <td>14.00/15.30</td>
-        <td>Attivita in sezione e interventi specialisti (Mezzani e Grandi)</td>
+        <td>14.00 - 15.30</td>
+        <td>Attivita in sezionee interventi specialisti<br>(Mezzani e Grandi)</td>
       </tr>
       <tr>
-        <td>15.45/16.00</td>
+        <td>15.45 - 16.00</td>
         <td>Uscita</td>
       </tr>
       <tr>
-        <td>16.00/17.30*</td>
+        <td>16.00 - 17.30*</td>
         <td>Post scuola</td>
       </tr>
     </tbody>
   </table>
-  <p>*Scuola "San Giorgio" pre scuola 7.45/9.00 <br />
-  *Scuola "San Giorgio" Dopo scuola 16.00/17.45</p>
 </section>
 
 <section>
