--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -300,6 +300,9 @@ footer {
 .contact {
   padding-bottom: 2rem;
   text-align: center;
+  a {
+    color: $font-color;
+  }
 }
 
 .botton {
@@ -311,21 +314,54 @@ footer {
   padding: 0.5rem;
   text-align: center;
   align-content: center;
-  width: 10%;
-  height: auto;
-  :visited{
-    color: $font-color;
-  }
+  width: 100px;
+}
+.botton a,
+.botton:visited {
+  color: $font-color;
 }
 
-table {
-  align: center;
+.table {
   text-align: center;
-  border-collapse: collapse;
-  th, td {
-    border: 3px solid $background-footer;
-  }
-  tr:nth-child(even) {background-color: #f2f2f2;}
+  display: grid;
+  border-left: 3px solid black;
+  border-bottom: 3px solid black;
+  border-right: 3px solid black;
+  margin: 3rem;
+}
+
+.table thead {
+  background: black;
+  color: white;
+}
+
+.table thead th {
+  padding: 0.5rem;
+}
+
+.table tr {
+  display: grid;
+  grid-gap: 0.25rem;
+  grid-template-columns: 1fr 1fr;
+}
+
+.table th {
+  grid-column: 1/3;
+}
+
+.table td {
+  padding: 0.5rem;
+  background: #efefef;
+}
+
+.table tbody {
+  display: grid;
+  padding: 0.25rem;
+  grid-gap: 0.25rem;
+}
+
+.table td:nth-child(2n+1) {
+  background: #dcdcdc;
 }
 
 .team, .project, .event, .contact {
