--- a/source/scuole/san_giuseppe.html.erb
+++ b/source/scuole/san_giuseppe.html.erb
@@ -18,35 +18,35 @@
 <section>
   <h1 class="title">Galleria</h1>
   <div class="gallery">
-    <figure class="gallery__item">
-      <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200' %>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200', class: 'card__image' %>
       <% end %>
-      <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
     </figure>
-    <figure class="gallery__item">
-      <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200' %>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200', class: 'card__image' %>
       <% end %>
-      <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
     </figure>
-    <figure class="gallery__item">
-      <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200' %>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200', class: 'card__image' %>
       <% end %>
-      <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
     </figure>
-    <figure class="gallery__item">
-      <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200' %>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200', class: 'card__image' %>
       <% end %>
-      <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
     </figure>
-    <figure class="gallery__item">
-      <% link_to '/scuole/san_giorgio.html' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200' %>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200', class: 'card__image' %>
       <% end %>
-      <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
     </figure>
   </div>
 </section>
