--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -227,10 +227,10 @@ footer {
   border: 3px solid $background-footer;
   border-radius: 2px;
   margin-top: 2rem;
+  font-family: 'Noto Serif', sans-serif
   a {
     display: block;
     text-decoration: underline;
-    font-family: 'Noto serif';
     margin: 0;
     padding: 0;
   }
@@ -269,32 +269,42 @@ footer {
   margin-bottom: 2rem;
 }
 .gallery {
+  padding: 1rem;
   display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 0.75rem;
-  crop: fit;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-auto-rows: min-content;
+  justify-items: center;
 }
-.gallery__item {
-  object-fit: cover;
-  display: grid;
-  grid-template-rows: 1fr auto;
+
+.gallery-card {
   border: 3px solid black;
-  grid-gap: 0.5rem;
-}
-
-.gallery__item img {
-  width: 100%;
-  max-height: 20rem;
-  object-fit: cover;
-  justify-self: center;
-  padding: 0.5rem;
-}
-
-.gallery__item figcaption {
   background: black;
-  color: white;
-  text-align: center;
+  width: 100%;
+}
+
+.card__link {
+  display: block;
+}
+
+.card__image {
+  display: block;
   padding: 0.25rem;
+  background: white;
+  width: 100%;
+}
+
+.card__description {
+  color: white;
+  padding: 0.25rem;
+  text-align: center;
+}
+
+figcaption {
+  color: $description;
+  padding: 0.25rem;
+  text-align: center;
+  font-family: 'Noto Serif', sans-serif
 }
 
 .contact {
