--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,11 +1,13 @@
-
 $content-width: 40rem;
 $breakpoint-xs: 440px;
 $breakpoint-sm: 600px;
 $font-color: #282A2E;
-$description: white;
 $background-footer: #505151;
-
+$breakpoint: 400px;
+$dark-gray: #dcdcdc;
+$light-gray: #efefef;
+$white: white;
+$black: black;
 
 * {
   box-sizing: border-box;
@@ -202,13 +204,13 @@ footer {
   font-family: 'Noto Serif', sans-serif;
   display: grid;
   grid-gap: 1rem;
-  color: $description;
+  color: $white;
 }
 
 .footer-item {
   display: block;
   margin: 0;
-  color: $description;
+  color: $white;
 }
 
 
@@ -301,7 +303,7 @@ footer {
 }
 
 figcaption {
-  color: $description;
+  color: $white;
   padding: 0.25rem;
   text-align: center;
   font-family: 'Noto Serif', sans-serif
@@ -334,46 +336,80 @@ figcaption {
 .table {
   text-align: center;
   display: grid;
-  border-left: 3px solid black;
-  border-bottom: 3px solid black;
-  border-right: 3px solid black;
-  margin: 3rem;
+  border-left: 3px solid $black;
+  border-bottom: 3px solid $black;
+  border-right: 3px solid $black;
+  box-shadow: 2px 2px 2px $dark-gray;
 }
 
 .table thead {
-  background: black;
-  color: white;
+  background: $black;
+  color: $white;
+  font-family: 'Noto Serif', serif;
+  text-transform: uppercase;
+}
+
+.table thead tr {
+  display: grid;
 }
 
 .table thead th {
   padding: 0.5rem;
-}
-
-.table tr {
-  display: grid;
-  grid-gap: 0.25rem;
-  grid-template-columns: 1fr 1fr;
-}
-
-.table th {
-  grid-column: 1/3;
-}
-
-.table td {
-  padding: 0.5rem;
-  background: #efefef;
+  text-align: center;
 }
 
 .table tbody {
   display: grid;
-  padding: 0.25rem;
+  grid-template-rows: 1fr;
   grid-gap: 0.25rem;
+  padding: 0.25rem;
+}
+
+.table tbody tr {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 0.25rem;
+  padding: 0.25rem;
+  background: $light-gray;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.table td {
+  justify-content: center;
 }
 
 .table td:nth-child(2n+1) {
-  background: #dcdcdc;
+    font-weight: bold;
 }
 
-.team, .project, .event, .contact {
-  margin-top: 5rem;
+@media (min-width: $breakpoint) {
+  .table tbody tr {
+    grid-gap: 0.25rem;
+    grid-template-columns: 1fr 1fr;
+    padding: 0;
+    background: $white;
+  }
+
+  .table th {
+    grid-column: 1/3;
+  }
+
+  .table td {
+    padding: 0.5rem;
+    background: $light-gray;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    box-shadow: 1px 1px 2px $dark-gray;
+  }
+
+  .table tbody {
+    display: grid;
+    padding: 0.25rem;
+    grid-gap: 0.25rem;
+  }
+
+  .table td:nth-child(2n+1) {
+    background: $dark-gray;
+  }
 }
