--- a/source/scuole/san_giuseppe.html.erb
+++ b/source/scuole/san_giuseppe.html.erb
@@ -15,41 +15,38 @@
   </p>
 </section>
 
-<section>
-  <h1 class="title">Galleria</h1>
-  <div class="gallery">
-    <figure class="gallery-card">
-      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200', class: 'card__image' %>
-      <% end %>
-      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</figcaption>
-    </figure>
-    <figure class="gallery-card">
-      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200', class: 'card__image' %>
-      <% end %>
-      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
-    </figure>
-    <figure class="gallery-card">
-      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200', class: 'card__image' %>
-      <% end %>
-      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
-    </figure>
-    <figure class="gallery-card">
-      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200', class: 'card__image' %>
-      <% end %>
-      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
-    </figure>
-    <figure class="gallery-card">
-      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
-        <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200', class: 'card__image' %>
-      <% end %>
-      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</figcaption>
-    </figure>
-  </div>
-</section>
+<div class="gallery">
+  <figure class="gallery-card">
+    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% end %>
+    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</figcaption>
+  </figure>
+  <figure class="gallery-card">
+    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% end %>
+    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
+  </figure>
+  <figure class="gallery-card">
+    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% end %>
+    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+  </figure>
+  <figure class="gallery-card">
+    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% end %>
+    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
+  </figure>
+  <figure class="gallery-card">
+    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% end %>
+    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</figcaption>
+  </figure>
+</div>
 
 <section>
   <table class="table">
@@ -113,15 +110,15 @@
     <%= image_tag 'teacher.jpeg', class: 'cover-image' %>
     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
-  <div class="project">
+  <div class="section">
     <h1 class="title">Progetti in corso</h1>
     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <%= link_to 'Scopri', '/scuole/san_giuseppe/progetti.html', class: 'botton' %>
+    <%= link_to 'Scopri', '/scuole/san_giuseppe/progetti.html', class: 'button' %>
   </div>
-  <div class="event">
+  <div class="section">
     <h1 class="title">Eventi</h1>
     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <%= link_to 'Scopri', '/scuole/san_giuseppe/progetti_in_corso.html', class:'botton' %>
+    <%= link_to 'Scopri', '/scuole/san_giuseppe/progetti_in_corso.html', class:'button' %>
   </div>
   <div class="contact">
     <h1 class="title">Contatti</h1>
