--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,13 +1,12 @@
 $content-width: 40rem;
 $breakpoint-xs: 440px;
 $breakpoint-sm: 600px;
+$breakpoint-g: 200px;
 $font-color: #282A2E;
 $background-footer: #505151;
-$breakpoint: 400px;
 $dark-gray: #dcdcdc;
 $light-gray: #efefef;
-$white: white;
-$black: black;
+$white: #FFFFFF;
 
 * {
   box-sizing: border-box;
@@ -245,6 +244,13 @@ footer {
   }
 }
 
+.cover-image {
+  display: block;
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .card__school-link {
   display: block;
   text-align: center;
@@ -264,152 +270,4 @@ footer {
   margin-bottom: 1rem;
 }
 
-.cover-image {
-  display: block;
-  width: 100%;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.gallery {
-  padding: 1rem;
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-auto-rows: min-content;
-  justify-items: center;
-}
-
-.gallery-card {
-  border: 3px solid black;
-  background: black;
-  width: 100%;
-}
-
-.card__link {
-  display: block;
-}
-
-.card__image {
-  display: block;
-  padding: 0.25rem;
-  background: white;
-  width: 100%;
-}
-
-.card__description {
-  color: white;
-  padding: 0.25rem;
-  text-align: center;
-}
-
-figcaption {
-  color: $white;
-  padding: 0.25rem;
-  text-align: center;
-  font-family: 'Noto Serif', sans-serif
-}
-
-.contact {
-  padding-bottom: 2rem;
-  text-align: center;
-  a {
-    color: $font-color;
-  }
-}
-
-.botton {
-  display: inline-grid;
-  border: 2px solid $background-footer;
-  border-radius: 10px;
-  margin: 0 auto;
-  display: block;
-  padding: 0.5rem;
-  text-align: center;
-  align-content: center;
-  width: 100px;
-}
-.botton a,
-.botton:visited {
-  color: $font-color;
-}
-
-.table {
-  text-align: center;
-  display: grid;
-  border-left: 3px solid $black;
-  border-bottom: 3px solid $black;
-  border-right: 3px solid $black;
-  box-shadow: 2px 2px 2px $dark-gray;
-}
-
-.table thead {
-  background: $black;
-  color: $white;
-  font-family: 'Noto Serif', serif;
-  text-transform: uppercase;
-}
-
-.table thead tr {
-  display: grid;
-}
-
-.table thead th {
-  padding: 0.5rem;
-  text-align: center;
-}
-
-.table tbody {
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-gap: 0.25rem;
-  padding: 0.25rem;
-}
-
-.table tbody tr {
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-gap: 0.25rem;
-  padding: 0.25rem;
-  background: $light-gray;
-  font-family: 'Noto Sans', sans-serif;
-}
-
-.table td {
-  justify-content: center;
-}
-
-.table td:nth-child(2n+1) {
-    font-weight: bold;
-}
-
-@media (min-width: $breakpoint) {
-  .table tbody tr {
-    grid-gap: 0.25rem;
-    grid-template-columns: 1fr 1fr;
-    padding: 0;
-    background: $white;
-  }
-
-  .table th {
-    grid-column: 1/3;
-  }
-
-  .table td {
-    padding: 0.5rem;
-    background: $light-gray;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    box-shadow: 1px 1px 2px $dark-gray;
-  }
-
-  .table tbody {
-    display: grid;
-    padding: 0.25rem;
-    grid-gap: 0.25rem;
-  }
-
-  .table td:nth-child(2n+1) {
-    background: $dark-gray;
-  }
-}
+@import '_scuola.css.scss';
