--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,10 +1,15 @@
-
 $content-width: 40rem;
+$dimension-column: 200px;
 $breakpoint-xs: 440px;
 $breakpoint-sm: 600px;
-$font-color: #282A2E;
-$description: white;
+$alternative-color-font: #FFFFFF;
+$site-background: #FFFEFE;
+$site-secondary-color-one: #EFEFEF;
+$site-secondary-color-two: #DCDCDC;
 $background-footer: #505151;
+$site-primary-color: #282A2E;
+
+@import '_scuola.css.scss';
 
 * {
   box-sizing: border-box;
@@ -104,17 +109,17 @@ a:link {
 
 .header-link--laboratories:visited,
 .header-link--schools:visited {
-  color: $font-color;
+  color: $site-primary-color;
 }
 
 .header-link--laboratories:link,
 .header-link--schools:link {
-  color: $font-color;
+  color: $site-primary-color;
 }
 
 .header-brand__link:visited,
 .header-link:visited {
-  color: $font-color;
+  color: $site-primary-color;
 }
 
 a:hover {
@@ -142,16 +147,16 @@ a:hover {
 .breadcrumbs li a {
   text-decoration: none;
   text-transform: uppercase;
-  color: $font-color;
+  color: $site-primary-color;
 }
 
 .breadcrumbs a:visited {
   text-decoration: none;
-  color: $font-color;
+  color: $site-primary-color;
 }
 
 .breadcrumbs a:hover {
-  color: $font-color;
+  color: $site-primary-color;
   text-decoration: underline;
 }
 
@@ -167,17 +172,17 @@ a:hover {
 }
 .documents-list a:visited,
 .documents-list a:link{
-  color: $font-color;
+  color: $site-primary-color;
 }
 .documents-list {
   display: flex;
   flex-direction: column;
 }
 .documents-list__item {
-  padding: 1rem;
   width: 100%;
   display: flex;
   align-items: center;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 @media (min-width: $breakpoint-sm) {
@@ -191,10 +196,6 @@ a:hover {
   height: auto;
 }
 
-.gallery {
-  object-fit: cover;
-}
-
 footer {
   display: grid;
   background-color: $background-footer;
@@ -206,13 +207,13 @@ footer {
   font-family: 'Noto Serif', sans-serif;
   display: grid;
   grid-gap: 1rem;
-  color: $description;
+  color: $alternative-color-font;
 }
 
 .footer-item {
   display: block;
   margin: 0;
-  color: $description;
+  color: $alternative-color-font;
 }
 
 
@@ -231,10 +232,10 @@ footer {
   border: 3px solid $background-footer;
   border-radius: 2px;
   margin-top: 2rem;
+  font-family: 'Noto Serif', sans-serif
   a {
     display: block;
     text-decoration: underline;
-    font-family: 'Noto serif';
     margin: 0;
     padding: 0;
   }
@@ -247,6 +248,13 @@ footer {
   }
 }
 
+.cover-image {
+  display: block;
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .card__school-link {
   display: block;
   text-align: center;
@@ -254,7 +262,7 @@ footer {
 }
 .card__school-link:link,
 .card__school-link:visited {
-  color: $font-color;
+  color: $site-primary-color;
 }
 
 .card__school-photo {
@@ -263,4 +271,7 @@ footer {
 #map {
   width: 100%;
   height: 300px;
+  margin-bottom: 1rem;
 }
+
+@import '_scuola.css.scss';
