43 pages creation and other fixes

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -164,6 +164,7 @@ a:hover {
   font-family: 'Noto Serif', serif;
   font-size: 15px;
   text-align: center;
+  margin-top: 3rem;
 }
 
 .text {
@@ -273,5 +274,3 @@ footer {
   height: 300px;
   margin-bottom: 1rem;
 }
-
-@import '_scuola.css.scss';
