--- a/source/scuole/san_giuseppe/progetti_in_corso.html.erb
+++ b/source/scuole/san_giuseppe/progetti_in_corso.html.erb
@@ -1,15 +1,15 @@
-<section class="project">
+<section class="section">
     <%= image_tag 'https://images.unsplash.com/photo-1542627250-da40d2d18228?ifit=crop', class: 'cover-image' %>
     <h1 class="title">Progetto 1</h1>
-    <p class="text">03/07/2019</p>
+    <p class="date">03/07/2019</p>
     <p class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br /> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
     <%= link_to 'Scopri il progetto', '/scuole/san_giuseppe/progetto.html', class: 'button button--project' %>
 </section>
 
-<section class="project">
+<section class="section">
     <%= image_tag 'https://images.unsplash.com/photo-1535209039648-9524289505fd?fit=crop', class:'cover-image' %>
     <h1 class="title">Progetto 2</h1>
-    <p class="text">03/07/2019</p>
+    <p class="date">03/07/2019</p>
     <p class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br /> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
     <%= link_to 'Scopri il progetto', '/scuole/san_giuseppe/progetto.html', class: 'button button--project' %>
 </section>
