--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -253,7 +253,6 @@ footer {
   display: block;
   max-width: 100%;
   margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 .card__school-link {
@@ -288,7 +287,12 @@ footer {
   color: $site-primary-color;
 }
 
-.project{
-  padding-bottom: 3rem;
+.button--project {
+  margin: 2rem;
+  align-self: flex-end;
+}
 
+.date {
+  display: flex;
+  align-self: start
 }
