23 page type application

--- a/source/scuole/san_giuseppe/progetti_in_corso.html.erb
+++ b/source/scuole/san_giuseppe/progetti_in_corso.html.erb
@@ -2,7 +2,7 @@
   <li><%= link_to 'Home', '/index.html' %></li>
   <li><%= link_to 'Le scuole', '/le_scuole.html' %></li>
   <li><%= link_to 'San Giuseppe', '/scuole/san_giuseppe.html' %></li>
-  <li><%= link_to 'progetti_in_corso', '/scuole/san_giuseppe/progetti_in_corso.html' %></li>
+  <li><%= link_to 'Progetti in corso', '/scuole/san_giuseppe/progetti_in_corso.html' %></li>
 </ul>
 
 <div class="card-container">
