--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -289,7 +289,9 @@ footer {
 
 .date {
   display: flex;
-  align-self: start
+  align-self: start;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 13px;
 }
 
 .card-container {
