--- a/source/scuole/san_giuseppe/progetti_in_corso/progetto_1.html.erb
+++ b/source/scuole/san_giuseppe/progetti_in_corso/progetto_1.html.erb
@@ -1,3 +1,11 @@
+<ul class="breadcrumbs">
+  <li><%= link_to 'Home', '/index.html' %></li>
+  <li><%= link_to 'Le scuole', '/le_scuole.html' %></li>
+  <li><%= link_to 'San Giuseppe', '/scuole/san_giuseppe.html' %></li>
+  <li><%= link_to 'Progetti in corso', '/scuole/san_giuseppe/progetti_in_corso.html' %></li>
+  <li><%= link_to 'Progetto 1', '/scuole/san_giuseppe/progetti_in_corso/progetto_1.html' %></li>
+</ul>
+
 <section>
   <h1 class="title">Progetto 1</h1>
   <%= image_tag 'example1.jpg', class: 'cover-image' %>
