--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -49,6 +49,7 @@ header {
   text-align: center;
   font-size: 2rem;
   text-transform: uppercase;
+  color: $site-primary-color;
 }
 
 .header-link {
